Ui/c_interface.h

typedef boost::shared_ptr<BlockModel> BlockModelRef;
typedef boost::shared_ptr<EventTrackModel> EventTrackModelRef;
typedef boost::shared_ptr<RulerTrackModel> RulerTrackModelRef;
// Block

BlockModelRef *block_model_create(const BlockModelConfig *config);
void block_model_destroy(BlockModelRef *b);
// unused because I store it in the Block now
// const BlockModelConfig *block_model_get_config(BlockModelRef *b);
void block_model_set_config(BlockModelRef *b, BlockModelConfig *config);
const char *block_model_get_title(const BlockModelRef *b);
void block_model_set_title(BlockModelRef *b, const char *s);
void block_model_insert_event_track(BlockModelRef *b, int at, int width,
        EventTrackModelRef *t, RulerTrackModelRef *r);
void block_model_insert_ruler_track(BlockModelRef *b, int at, int width,
        RulerTrackModelRef *r);
void block_model_insert_divider(BlockModelRef *b, int at, int width,
        Color *color);
void block_model_remove_track(BlockModelRef *b, int at);
// Block view

BlockViewWindow *block_view_create(int x, int y, int w, int h,
        BlockModelRef *model, RulerTrackModelRef *r,
        BlockViewConfig *view_config);
void block_view_destroy(BlockViewWindow *b);
void block_view_resize(BlockViewWindow *b, int x, int y, int w, int h);
void block_view_get_size(BlockViewWindow *b, int *sz);
// unused because I store it in the Block now
// const BlockViewConfig *block_view_get_config(BlockViewWindow *b);
void block_view_set_config(BlockViewWindow *b, BlockViewConfig *config);
const ZoomInfo *block_view_get_zoom(const BlockViewWindow *b);
void block_view_set_zoom(BlockViewWindow *b, const ZoomInfo *zoom);