fltk/Block.h

struct BlockModelConfig {
    // An array of 3 or more Colors for the selections.
    Color select[Config::max_selections];
    Color bg;
    Color track_box;
    Color sb_box;
};