fltk/types.h

struct Selection {
    Selection() : start_track(-1), cur_track(-1) {}
    Selection(Color color, int start_track, ScoreTime start_pos, int cur_track,
            ScoreTime cur_pos) :
        color(color), start_track(start_track), start_pos(start_pos),
        cur_track(cur_track), cur_pos(cur_pos)
    {}

    bool operator==(const Selection &o) const {
        return color == o.color && start_track == o.start_track
            && start_pos == o.start_pos && cur_track == o.cur_track
            && cur_pos == o.cur_pos;
    }
    bool operator!=(const Selection &o) const { return !(*this == o); }

    // Both being -1 ensures that checking 'low <= track <= high' will be false
    // for an empty selection.
    bool empty() const { return cur_track == -1 && start_track == -1; }
    int low_track() const { return std::min(start_track, cur_track); }
    int high_track() const { return std::max(start_track, cur_track); }

    Color color;
    int start_track;
    ScoreTime start_pos;
    int cur_track;
    ScoreTime cur_pos;
};